--- a/src/components/tasks.css
+++ b/src/components/tasks.css
@@ -8,7 +8,7 @@
     border: 2px solid black;
     border-radius: 10px;
     padding: 20px;
-    background-color: #c9e2a5;
+    background-color: #f9e9cc;
 }
 
 .tasks-title {
