--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,12 +1,15 @@
-.navbar{
-    
+.navbar {
+    width: 300px;
+    height: 150px;
+    background-color: lightgray;
+    padding: 10px;
 }
 
 a {
-    font-weight: 200
-    color
+    font-weight: 200;
+    color: aqua;
 }
 
 a:hover{
-    color:aquamarine
+    color:aquamarine;
 }
