--- a/src/components/tasks.css
+++ b/src/components/tasks.css
@@ -25,6 +25,22 @@
     list-style-type: none; /* Removes default bullets */
     padding-left: 0;
     font-family: monospace; /* Ensures even spacing */
+    max-height: 17rem;
+    overflow-y: auto;
+    padding-right: 10px;
+}
+
+.tasks-list::-webkit-scrollbar {
+    width: 6px; /* Scrollbar width */
+}
+
+.tasks-list::-webkit-scrollbar-thumb {
+    background-color: #888; /* Scrollbar color */
+    border-radius: 10px;
+}
+
+.tasks-list::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .tasks-list li {
@@ -53,4 +69,5 @@
     width: 18px;
     height: 18px;
     cursor: pointer;
+    
 }
