--- a/src/components/tasks.css
+++ b/src/components/tasks.css
@@ -31,11 +31,11 @@
 }
 
 .tasks-list::-webkit-scrollbar {
-    width: 6px; /* Scrollbar width */
+    width: 6px; 
 }
 
 .tasks-list::-webkit-scrollbar-thumb {
-    background-color: #888; /* Scrollbar color */
+    background-color: #888; 
     border-radius: 10px;
 }
 
@@ -45,10 +45,10 @@
 
 .tasks-list li {
     font-size: 1rem;
-    margin-bottom: 8px; /* Adds space between items */
+    margin-bottom: 8px; 
     display: flex;
     align-items: center;
-    gap: 8px; /* Space between checkbox and text */
+    gap: 8px; 
 }
 
 .task-name {
@@ -56,7 +56,7 @@
 }
 
 .dots {
-    font-family: monospace; /* Ensures the dots are evenly spaced */
+    font-family: monospace; 
     flex: 1;
     margin: 0 10 px;
     overflow: hidden;
@@ -74,7 +74,7 @@
 }
 
 .task-date {
-    text-align: right; /* Aligns the date to the right */
+    text-align: right; 
     flex: 0 0 auto;
     min-width: 70px;
 }
