--- a/src/components/tasks.css
+++ b/src/components/tasks.css
@@ -53,6 +53,10 @@
 
 .task-name {
     flex: 0 0 auto;
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    /*text-overflow: ellipsis;*/
 }
 
 .dots {
